Added an Android controller to have magic1311.com/android so the people buying the app from the store have a place to go and know how to register as an user to later activate the purchased software.
Added a view to the store controller that is where the paypal stuff will be in.

changed some stuff in the navbar and the shared layout style

Changes in CSS

--- a/REST_magic1311/REST_magic1311.csproj
+++ b/REST_magic1311/REST_magic1311.csproj
@@ -239,6 +239,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AndroidController.cs" />
     <Compile Include="Controllers\DownloadsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MyAppsController.cs" />
@@ -286,6 +287,8 @@
     <Content Include="Views\MyApps\MyRegisteredApps.cshtml" />
     <Content Include="Views\Support\Index.cshtml" />
     <Content Include="Views\Store\Buy.cshtml" />
+    <Content Include="Views\Android\Index.cshtml" />
+    <Content Include="Views\Store\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
